--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <form id="formulaire">
         <p id="text1" >Ajouter un élément à la liste : </p>
-        
-        <input id="input" class="col-12" type="text" name="input" required minlength="2" maxlength="15" size="5">
+
+        <input id="input" class="col-12" type="text" name="input" required minlength="2" maxlength="30" size="5">
 
         <br><br>
 
@@ -25,7 +25,7 @@
 
         <p id="text2" >Liste des courses :</p>
 
-        <div id="liste"></div>
+        <ul id="liste"  class="case"></ul>
     </form>
 
 </section>
@@ -33,12 +33,12 @@
 
 <section class="column col-8">
     <p id="text3" >Reste à acheter :</p>
-    <div id="reste"></div>
+    <ul id="reste" class="case"></ul>
 
     <br><br><br><br>
 
     <p id="text4" >Déjà à la maison :</p>
-    <div id="maison"></div>
+    <ul id="maison" class="case"></ul>
 
 </section>
 
